--- a/src/app.html
+++ b/src/app.html
@@ -174,6 +174,7 @@
                 display: block;
                 font-family: var(--font-sans-serif);
                 margin: auto;
+                min-height: 100%;
                 z-index: 1;
             }
 
